# smart-contracts

./: .env_sample  DEPLOYMENT_INFO.txt  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yaml
agents/: agent.py  mcp_tools.py
applications/smart_contracts/: agent.py  app.py  mcp_tools.py  requirements.txt
smart_contracts/: app.py  main.py  mcp_tools.py
